Fix header/footer readability

--- a/views/style.sass
+++ b/views/style.sass
@@ -40,9 +40,10 @@ a, a:hover, a:link, a:visited
 
 #background:after
   width: 100%
-  height: 100%
   position: absolute
-  top: 0px
+  font-size: 14px
+  top: 2em
+  bottom: 2em
   left: 0px
   content: ''
   background-image: url('data:image/jpeg;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABhJREFUeNpiYGBgePz//38GRhABAgABBgBFTAbfCBNE2AAAAABJRU5ErkJggg==')
